// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`finetuning - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Deploy, evaluate, fine-tune, and manage Foundry agents end-to-end: Docker build, ACR push, hosted/prompt agent create, container start, batch eval, continuous eval, prompt optimizer, Agent Optimizer scaffold, agent.yaml, dataset curation from traces, model fine-tuning (SFT/DPO/RFT). USE FOR: deploy agent, hosted agent, create agent, add tool to agent, invoke agent, evaluate agent, continuous eval, monitoring, optimize prompt, optimize agent instructions, agent optimizer, deploy model, Foundry project, RBAC, role assignment, permissions, quota, capacity, region, troubleshoot agent, deployment failure, invocations WebSocket, AI Services, create Foundry resource, provision, knowledge index, customize deployment, onboard, availability, fine-tune, SFT, DPO, RFT, grader, distillation, fine-tuned model. DO NOT USE FOR: Azure Functions, App Service, general Azure deploy (use azure-deploy), general Azure prep (use azure-prepare).",
  "extractedKeywords": [
    "agent",
    "agents",
    "ai",
    "assignment",
    "availability",
    "azure",
    "azure-deploy",
    "azure-prepare",
    "batch",
    "build",
    "capacity",
    "cli",
    "container",
    "continuous",
    "create",
    "curation",
    "customize",
    "dataset",
    "deploy",
    "deployment",
    "distillation",
    "docker",
    "end-to-end",
    "eval",
    "evaluate",
    "failure",
    "fine-tune",
    "fine-tuned",
    "fine-tuning",
    "foundry",
    "from",
    "functions",
    "general",
    "grader",
    "hosted",
    "index",
    "instructions",
    "invocations",
    "invoke",
    "knowledge",
    "manage",
    "mcp",
    "microsoft",
    "model",
    "monitor",
    "monitoring",
    "onboard",
    "optimize",
    "optimizer",
    "permissions",
    "prep",
    "project",
    "prompt",
    "provision",
    "push",
    "quota",
    "rbac",
    "region",
    "resource",
    "role",
    "scaffold",
    "service",
    "services",
    "start",
    "tool",
    "traces",
    "troubleshoot",
    "validation",
    "vnet",
    "websocket",
    "yaml",
  ],
  "name": "microsoft-foundry",
}
`;

exports[`finetuning - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "agent",
  "agents",
  "ai",
  "assignment",
  "availability",
  "azure",
  "azure-deploy",
  "azure-prepare",
  "batch",
  "build",
  "capacity",
  "cli",
  "container",
  "continuous",
  "create",
  "curation",
  "customize",
  "dataset",
  "deploy",
  "deployment",
  "distillation",
  "docker",
  "end-to-end",
  "eval",
  "evaluate",
  "failure",
  "fine-tune",
  "fine-tuned",
  "fine-tuning",
  "foundry",
  "from",
  "functions",
  "general",
  "grader",
  "hosted",
  "index",
  "instructions",
  "invocations",
  "invoke",
  "knowledge",
  "manage",
  "mcp",
  "microsoft",
  "model",
  "monitor",
  "monitoring",
  "onboard",
  "optimize",
  "optimizer",
  "permissions",
  "prep",
  "project",
  "prompt",
  "provision",
  "push",
  "quota",
  "rbac",
  "region",
  "resource",
  "role",
  "scaffold",
  "service",
  "services",
  "start",
  "tool",
  "traces",
  "troubleshoot",
  "validation",
  "vnet",
  "websocket",
  "yaml",
]
`;
